apps/technitium-dns/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: technitium-dns
  labels:
    velero.io/backup: "true"
