apps/technitium-dns/base/exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: technitium-exporter
  namespace: technitium-dns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: technitium-exporter
  template:
    metadata:
      labels:
        app: technitium-exporter
    spec:
      containers:
      - name: exporter
        image: ghcr.io/brioche-works/technitium-dns-prometheus-exporter:master
        ports:
        - containerPort: 9100
          name: metrics
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: technitium-exporter
  namespace: technitium-dns
  labels:
    app: technitium-exporter
spec:
  ports:
  - name: metrics
    port: 9100
    targetPort: 9100
  selector:
    app: technitium-exporter
